[gd_scene load_steps=34 format=3 uid="uid://dc0w0dannprwp"]

[ext_resource type="Texture2D" uid="uid://b55od4jek8k57" path="res://Characters/Goblins/BomberGoblin/asstets/TNT_Blue.png" id="1_bpome"]
[ext_resource type="Script" path="res://Characters/Goblins/BomberGoblin/goblin.gd" id="1_ilqxl"]
[ext_resource type="Script" path="res://Scripts/state_machine/node_finite_state_machine.gd" id="3_y10g8"]
[ext_resource type="Script" path="res://Characters/Goblins/BomberGoblin/states/move_state.gd" id="5_h8tml"]
[ext_resource type="Script" path="res://Characters/Goblins/BomberGoblin/states/attack_state.gd" id="5_me2o5"]
[ext_resource type="Script" path="res://Characters/Goblins/BomberGoblin/states/idle_state.gd" id="6_jwrfc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gg1e4"]
atlas = ExtResource("1_bpome")
region = Rect2(192, 36, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3h77"]
atlas = ExtResource("1_bpome")
region = Rect2(384, 36, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymsye"]
atlas = ExtResource("1_bpome")
region = Rect2(576, 36, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_77uuo"]
atlas = ExtResource("1_bpome")
region = Rect2(768, 36, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj3ru"]
atlas = ExtResource("1_bpome")
region = Rect2(960, 36, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbwvq"]
atlas = ExtResource("1_bpome")
region = Rect2(0, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_06d2k"]
atlas = ExtResource("1_bpome")
region = Rect2(192, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4tt3"]
atlas = ExtResource("1_bpome")
region = Rect2(384, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7o4t"]
atlas = ExtResource("1_bpome")
region = Rect2(576, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_61b5p"]
atlas = ExtResource("1_bpome")
region = Rect2(768, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_h067j"]
atlas = ExtResource("1_bpome")
region = Rect2(960, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2g6v"]
atlas = ExtResource("1_bpome")
region = Rect2(576, 428, 192, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvoqb"]
atlas = ExtResource("1_bpome")
region = Rect2(768, 428, 192, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y0us"]
atlas = ExtResource("1_bpome")
region = Rect2(960, 428, 192, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf2ln"]
atlas = ExtResource("1_bpome")
region = Rect2(1152, 428, 192, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6sau"]
atlas = ExtResource("1_bpome")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ton1o"]
atlas = ExtResource("1_bpome")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk4qd"]
atlas = ExtResource("1_bpome")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlqi1"]
atlas = ExtResource("1_bpome")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8ygh"]
atlas = ExtResource("1_bpome")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqv0o"]
atlas = ExtResource("1_bpome")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fpqh"]
atlas = ExtResource("1_bpome")
region = Rect2(1152, 384, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_l2iy8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg1e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3h77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymsye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77uuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj3ru")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbwvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06d2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4tt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7o4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61b5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h067j")
}],
"loop": true,
"name": &"move",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2g6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvoqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y0us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf2ln")
}],
"loop": false,
"name": &"reload",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6sau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ton1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk4qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlqi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8ygh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqv0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fpqh")
}],
"loop": false,
"name": &"throw",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kmeov"]
radius = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u7n1d"]
radius = 35.0
height = 96.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4f2k"]
size = Vector2(463, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_l33dj"]
radius = 50.0

[node name="Goblin" type="CharacterBody2D" node_paths=PackedStringArray("state_machine") groups=["Enemy", "Patroller"]]
collision_layer = 8
collision_mask = 86
script = ExtResource("1_ilqxl")
state_machine = NodePath("StateMachine")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, -2)
sprite_frames = SubResource("SpriteFrames_l2iy8")
animation = &"throw"
autoplay = "idle"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kmeov")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(6, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_u7n1d")
debug_color = Color(0.977497, 0.128722, 0.194641, 0.42)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("3_y10g8")
initial_node_state = NodePath("IdleState")

[node name="MoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("5_h8tml")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="AttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("5_me2o5")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="AttackTimer" type="Timer" parent="StateMachine/AttackState"]
process_callback = 0
wait_time = 0.5

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("animated_sprite_2d", "character_body_2d")]
script = ExtResource("6_jwrfc")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
character_body_2d = NodePath("../..")

[node name="PlayerDetect" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource("RectangleShape2D_g4f2k")
debug_color = Color(0, 0.647677, 0.204275, 0.42)

[node name="PointDetectArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointDetectArea2D"]
shape = SubResource("CircleShape2D_l33dj")

[node name="IdleTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="ReleasePoint" type="Marker2D" parent="."]
position = Vector2(38, -11)

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="timeout" from="StateMachine/AttackState/AttackTimer" to="StateMachine/AttackState" method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_player_detect_body_exited"]
[connection signal="area_entered" from="PointDetectArea2D" to="." method="_on_point_detect_area_2d_area_entered"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
